# self_storage

./: .gitignore  README.md  cronjob  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  start.sh
request_calculation/: models.py
request_calculation/migrations/: 0001_initial.py
self_storage/: settings.py  urls.py
src/: manage.py
src/request_calculation/: admin.py  apps.py  urls.py  views.py
src/request_calculation/migrations/: 0001_initial.py
src/self_storage/: asgi.py  wsgi.py
src/static/js/: auth.js  edit_profile.js  order.js  reset_password.js
src/storage/: admin.py  urls.py  views.py
src/storage/migrations/: 0001_initial.py  0002_initial.py  0003_link.py
src/templates/: base.html  boxes.html  faq.html  index.html  my-rent-empty.html  my-rent.html  open_box.html
src/templates/include/: _box_item.html  navbar.html
src/users/: views.py
static/: Style.css
static/js/: auth.js  avatar.js  edit_profile.js  get_boxes.js  get_email.js  order.js  qr.js
storage/: admin.py  forms.py  models.py  urls.py  views.py
storage/migrations/: 0001_initial.py  0002_initial.py  0002_remove_box_box_type.py  0003_box_box_type.py  0004_remove_box_box_area.py  0005_user_alter_box_options_alter_warehouse_options.py
templates/: agreement.html  base.html  boxes.html  faq.html  index.html  my-rent-empty.html  my-rent.html  order.html
templates/admin/: index.html
templates/include/: _box_item.html  navbar_reg.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_avatar.py
(+10 files in other folders)
